{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1703,
  "lineage": "88745fbd-c7aa-ff62-6eb6-d4c08cb22dd0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0761d315f6a955c0f",
            "arn": "arn:aws:ec2:us-east-1:292814267481:elastic-ip/eipalloc-0761d315f6a955c0f",
            "domain": "vpc",
            "id": "eipalloc-0761d315f6a955c0f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-7-188-58.compute-1.amazonaws.com",
            "public_ip": "52.7.188.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0397fabe9d1952fe5",
            "arn": "arn:aws:ec2:us-east-1:292814267481:elastic-ip/eipalloc-0397fabe9d1952fe5",
            "domain": "vpc",
            "id": "eipalloc-0397fabe9d1952fe5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-192-126-129.compute-1.amazonaws.com",
            "public_ip": "34.192.126.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dbaf1a909228f3d5",
            "arn": "arn:aws:ec2:us-east-1:292814267481:instance/i-08caea1dda78e6c6a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08caea1dda78e6c6a",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_lifecycle": "spot",
            "instance_market_options": [
              {
                "market_type": "spot",
                "spot_options": [
                  {
                    "instance_interruption_behavior": "terminate",
                    "max_price": "0.003200",
                    "spot_instance_type": "one-time"
                  }
                ]
              }
            ],
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cac8f73b2ec42132",
            "private_dns": "ip-10-0-3-47.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.47",
            "public_ip": "44.197.248.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f9b9d46dca644d08",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "spot_instance_request_id": "sir-wa9f3nyj",
            "subnet_id": "subnet-0ea542e070389f19a",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0530fd9615f38e76c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet_a",
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dbaf1a909228f3d5",
            "arn": "arn:aws:ec2:us-east-1:292814267481:instance/i-0440c34d9d448b98a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0440c34d9d448b98a",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_lifecycle": "spot",
            "instance_market_options": [
              {
                "market_type": "spot",
                "spot_options": [
                  {
                    "instance_interruption_behavior": "terminate",
                    "max_price": "0.003200",
                    "spot_instance_type": "one-time"
                  }
                ]
              }
            ],
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c87acaf8d0fe2815",
            "private_dns": "ip-10-0-4-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.67",
            "public_ip": "54.83.151.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ac2cb634cd9ebf2e",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "spot_instance_request_id": "sir-wz1z27dj",
            "subnet_id": "subnet-0d3b33128182c8f53",
            "tags": {
              "Name": "Bastion Host b"
            },
            "tags_all": {
              "Name": "Bastion Host b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0530fd9615f38e76c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet_b",
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:internet-gateway/igw-0007db9180319a463",
            "id": "igw-0007db9180319a463",
            "owner_id": "292814267481",
            "tags": {
              "Name": "Lab1 Internet Gateway"
            },
            "tags_all": {
              "Name": "Lab1 Internet Gateway"
            },
            "vpc_id": "vpc-0605b636063c8045d"
          },
          "dependencies": [
            "aws_vpc.lab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lab1_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0ef6bb2fb50095f3d",
            "network_interface_id": "eni-0b72cfb6f6cf2e77e",
            "private_ip": "10.0.3.127",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ea542e070389f19a",
            "tags": {
              "Name": "Lab1 NAT Gateway A"
            },
            "tags_all": {
              "Name": "Lab1 NAT Gateway A"
            }
          },
          "dependencies": [
            "aws_subnet.public_subnet_a",
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lab1_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0624804814e491bef",
            "network_interface_id": "eni-07e61398990702ace",
            "private_ip": "10.0.4.214",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d3b33128182c8f53",
            "tags": {
              "Name": "Lab1 NAT Gateway B"
            },
            "tags_all": {
              "Name": "Lab1 NAT Gateway B"
            }
          },
          "dependencies": [
            "aws_subnet.public_subnet_b",
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ig_route_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:route-table/rtb-0507a44cca1fbf287",
            "id": "rtb-0507a44cca1fbf287",
            "owner_id": "292814267481",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0007db9180319a463",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Internet Route Table AZ-A"
            },
            "tags_all": {
              "Name": "Internet Route Table AZ-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0605b636063c8045d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab1",
            "aws_vpc.lab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ig_route_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:route-table/rtb-0c04c04c2670f32ff",
            "id": "rtb-0c04c04c2670f32ff",
            "owner_id": "292814267481",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0007db9180319a463",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Internet Route Table AZ-B"
            },
            "tags_all": {
              "Name": "Internet Route Table AZ-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-0605b636063c8045d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab1",
            "aws_vpc.lab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:route-table/rtb-064a5106a8d1ac70d",
            "id": "rtb-064a5106a8d1ac70d",
            "owner_id": "292814267481",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ef6bb2fb50095f3d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table AZ-A"
            },
            "tags_all": {
              "Name": "Private Route Table AZ-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0605b636063c8045d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.lab1_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:route-table/rtb-0aec7ba79e31f1f19",
            "id": "rtb-0aec7ba79e31f1f19",
            "owner_id": "292814267481",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0624804814e491bef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table AZ-B"
            },
            "tags_all": {
              "Name": "Private Route Table AZ-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-0605b636063c8045d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.lab1_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a51b9c302abb13b",
            "route_table_id": "rtb-064a5106a8d1ac70d",
            "subnet_id": "subnet-00f74390bfcdff9e0"
          },
          "dependencies": [
            "aws_nat_gateway.lab1_a",
            "aws_route_table.private_a",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c32a677472e5874",
            "route_table_id": "rtb-0aec7ba79e31f1f19",
            "subnet_id": "subnet-0ba663c388ec691cb"
          },
          "dependencies": [
            "aws_nat_gateway.lab1_b",
            "aws_route_table.private_b",
            "aws_subnet.private_subnet_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e53ec388f9c6fc1b",
            "route_table_id": "rtb-0507a44cca1fbf287",
            "subnet_id": "subnet-0ea542e070389f19a"
          },
          "dependencies": [
            "aws_internet_gateway.lab1",
            "aws_route_table.ig_route_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f56ea2d926b512a",
            "route_table_id": "rtb-0c04c04c2670f32ff",
            "subnet_id": "subnet-0d3b33128182c8f53"
          },
          "dependencies": [
            "aws_internet_gateway.lab1",
            "aws_route_table.ig_route_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:security-group/sg-0530fd9615f38e76c",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0530fd9615f38e76c",
            "ingress": [],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "292814267481",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0605b636063c8045d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:security-group/sg-0f440ad7542fd4b6d",
            "description": "Allow tcp inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0f440ad7542fd4b6d",
            "ingress": [],
            "name": "allow_mysql",
            "name_prefix": "",
            "owner_id": "292814267481",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "allow_mysql"
            },
            "tags_all": {
              "Name": "allow_mysql"
            },
            "timeouts": {
              "create": null,
              "delete": "10m"
            },
            "vpc_id": "vpc-0605b636063c8045d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:subnet/subnet-00f74390bfcdff9e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f74390bfcdff9e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292814267481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet AZ A"
            },
            "tags_all": {
              "Name": "Private Subnet AZ A"
            },
            "vpc_id": "vpc-0605b636063c8045d"
          },
          "dependencies": [
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:subnet/subnet-0ba663c388ec691cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba663c388ec691cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292814267481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet AZ B"
            },
            "tags_all": {
              "Name": "Private Subnet AZ B"
            },
            "vpc_id": "vpc-0605b636063c8045d"
          },
          "dependencies": [
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:subnet/subnet-0ea542e070389f19a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea542e070389f19a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292814267481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet AZ A"
            },
            "tags_all": {
              "Name": "Public Subnet AZ A"
            },
            "vpc_id": "vpc-0605b636063c8045d"
          },
          "dependencies": [
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:subnet/subnet-0d3b33128182c8f53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3b33128182c8f53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292814267481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet AZ B"
            },
            "tags_all": {
              "Name": "Public Subnet AZ B"
            },
            "vpc_id": "vpc-0605b636063c8045d"
          },
          "dependencies": [
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:vpc/vpc-0605b636063c8045d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0715522d7f10ec82a",
            "default_route_table_id": "rtb-07e3d4dd5636a7fff",
            "default_security_group_id": "sg-01304c6512944d7b4",
            "dhcp_options_id": "dopt-0071e583cf8a85617",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0605b636063c8045d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e3d4dd5636a7fff",
            "owner_id": "292814267481"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "mysql_sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:security-group-rule/sgr-0618e73730887b8d1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0618e73730887b8d1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f440ad7542fd4b6d",
            "security_group_rule_id": "sgr-0618e73730887b8d1",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_vpc.lab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:security-group-rule/sgr-0c27d4db2223c0118",
            "cidr_ipv4": "10.0.3.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0c27d4db2223c0118",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f440ad7542fd4b6d",
            "security_group_rule_id": "sgr-0c27d4db2223c0118",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_subnet.public_subnet_a",
            "aws_vpc.lab1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:security-group-rule/sgr-08b47a86947a25204",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-08b47a86947a25204",
            "ip_protocol": "tcp",
            "prefix_list_id": "pl-0e4bcff02b13bef1e",
            "referenced_security_group_id": null,
            "security_group_id": "sg-0530fd9615f38e76c",
            "security_group_rule_id": "sgr-08b47a86947a25204",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.lab1",
            "data.aws_ec2_managed_prefix_list.ec2_instance_connect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "self_reference_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292814267481:security-group-rule/sgr-05ff5c794dfc84dc7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-05ff5c794dfc84dc7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f440ad7542fd4b6d",
            "security_group_id": "sg-0f440ad7542fd4b6d",
            "security_group_rule_id": "sgr-05ff5c794dfc84dc7",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_vpc.lab1"
          ]
        }
      ]
    }
  ]
}